updated code to suffice execution via maven